Set the correct z-index for header (#147)

--- a/components/navigation/header.scss
+++ b/components/navigation/header.scss
@@ -254,6 +254,7 @@ about this property and its values.
       background: gradient('action');
       padding: padding('big');
       position: fixed;
+      z-index: z-index('top');
 
       .header__nav {
         &__menu,
